# ndndSIM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: ndndsim-consumer-zipf.cc  ndndsim-consumer-zipf.h  ndndsim-consumer.cc  ndndsim-consumer.h  ndndsim-producer.cc  ndndsim-producer.h
examples/: CMakeLists.txt  ndndsim-atlas-churn-scenario.cc  ndndsim-atlas-multihop-scenario.cc  ndndsim-atlas-prefix-scale-scenario.cc  ndndsim-atlas-routing-scenario.cc  ndndsim-atlas-scenario.cc  ndndsim-csma.cc  ndndsim-custom-app.cc  ndndsim-dv-convergence.cc  ndndsim-dv-multipath.cc  ndndsim-grid-dv.cc  ndndsim-grid.cc  ndndsim-link-failure.cc  ndndsim-simple.cc  ndndsim-sprint-churn.cc  ndndsim-topo-reader.cc  ndndsim-tree-tracers.cc  ndndsim-tree.cc  ndndsim-wifi.cc  ndndsim-zipf.cc  plot-ndndsim-traffic.py
examples/topologies/: topo-grid-2x2-verify.txt  topo-grid-3x3.txt  topo-linear-3-verify.txt  topo-linear-4-multihop.txt  topo-sprint.txt  topo-tree.txt
go/: build.sh  go.work  run_build.sh
go/.transformed-ndnd/: .dockerignore  Makefile  e2e-run.sh  go.mod  run-bier-e2e.sh  run-bier-mac.sh
go/.transformed-ndnd/cmd/: cmd.go
go/.transformed-ndnd/cmd/svs-chat/: main.go
go/.transformed-ndnd/cmd/traffic/: main.go
go/.transformed-ndnd/docs/: dv-control.md  fw-control.md
go/.transformed-ndnd/dv/: SPEC.md  dv.sample.yml
go/.transformed-ndnd/dv/cmd/: cmd.go
go/.transformed-ndnd/dv/config/: config.go  schema.tlv  schema.trust
go/.transformed-ndnd/dv/dv/: advert_data.go  advert_sync.go  insertion.go  mgmt.go  prefix.go  router.go  table_algo.go
go/.transformed-ndnd/dv/nfdc/: nfdc.go
go/.transformed-ndnd/dv/table/: neighbor_table.go  prefix_event.go  prefix_state.go
go/.transformed-ndnd/dv/tlv/: definitions.go  zz_generated.go
go/.transformed-ndnd/e2e/: client_lvs_minindn.lvs  client_lvs_minindn.tlv  dv.py  dv_util.py  fw.py  run_scenario.py  runner.py  test_001.py  test_002.py  test_003.py  test_004.py  test_005.py  test_006.py  test_007.py  test_008.py
go/.transformed-ndnd/fw/: yanfd.sample.yml
go/.transformed-ndnd/fw/bier/: bier.go  bier_conceptual_test.go  bier_fib_rebuild_test.go  bier_integration_test.go  bier_test.go  bier_topo_test.go
go/.transformed-ndnd/fw/core/: config.go
go/.transformed-ndnd/fw/defn/: name.go
go/.transformed-ndnd/fw/face/: events.go  http3-transport.go  internal-transport.go  multicast-udp-transport.go  ndnlp-link-service.go  null-transport.go  table.go  transport.go  unicast-tcp-transport.go  unicast-udp-transport.go  unix-stream-transport.go  web-socket-transport.go
go/.transformed-ndnd/fw/fw/: bestroute.go  bier.go  broadcast.go  multicast.go  strategy.go  thread.go
go/.transformed-ndnd/fw/mgmt/: bift.go  face.go  face_events_test.go  pet.go  strategy-choice.go  thread.go
go/.transformed-ndnd/fw/table/: config.go  dead-nonce-list.go  fib-strategy-hashtable.go  fib-strategy-tree.go  fib-strategy.go  pet.go  pet_test.go  pit-cs-tree.go  pit-cs.go  rib.go
go/.transformed-ndnd/repo/tlv/: definitions.go  zz_generated.go
go/.transformed-ndnd/sim/: consumer.go  consumer_test.go  doc.go  face.go  fw_face.go  ndndsim_sim.h  timer.go  trust.go
go/.transformed-ndnd/std/engine/: client_conf.go
go/.transformed-ndnd/std/engine/basic/: engine.go
go/.transformed-ndnd/std/examples/svs/alo-latest/: main.go
go/.transformed-ndnd/std/ndn/: client.go  spec.go
go/.transformed-ndnd/std/ndn/mgmt_2022/: definitions.go  mgmt.go  zz_generated.go
go/.transformed-ndnd/std/object/: client.go  client_announce.go  client_expose.go
go/.transformed-ndnd/std/sync/: snapshot_node_history.go  snapshot_node_latest.go  svs.go  svs_alo.go  svs_alo_data.go
go/.transformed-ndnd/tools/: pingserver.go  putchunks.go  svschat.go
go/.transformed-ndnd/tools/dvc/: dvc.go  dvc_pet.go  dvc_prefix.go  dvc_status.go
go/.transformed-ndnd/tools/nfdc/: nfdc.go  nfdc_pet.go
go/ndndsim/: go.mod  hooks.go
go/overlay-onephase/dv/dv/: bier_phase.go  table_metrics_phase.go
go/overlay-onephase/fw/fw/: broadcast.go
go/overlay-onephase/sim/: phase_features.go  phase_features_test.go
go/overlay-op/dv/table/: prefix_table_metrics.go
go/overlay-op/sim/: engine.go  forwarder.go  phase_features.go  table_metrics_phase.go
go/overlay-tw/dv/dv/: table_metrics_phase.go
go/overlay-tw/sim/: phase_features.go  table_metrics_phase.go
go/overlay-twophase/dv/dv/: bier_phase.go
go/overlay-twophase/sim/: phase_features.go  phase_features_test.go  table_metrics_phase.go
go/overlay/dv/dv/: notify.go  table_metrics.go
go/overlay/dv/table/: router_event.go  sim_snapshot.go  synthetic.go
go/overlay/sim/: cgo_export.go  clock.go  clock_test.go  consumer_test.go  dv.go  dv_integration_test.go  engine.go  engine_test.go  fib_debug_test.go  forwarder.go  fw_face.go  ndndsim_sim.h  node.go  runtime.go  sim_snapshot.go  table_metrics.go  util.go
go/overlay/sim/cmd/: main.go
go/overlay/std/security/trust_schema/: null_schema_test.go
go/overlay/std/sync/: sim_snapshot.go
go/overlay/tools/: traffic.go
go/transform/: go.mod  helpers.go  inject.go  main.go  rewrite.go  rules.go  transform
helper/: ndndsim-app-helper.cc  ndndsim-app-helper.h  ndndsim-link-tracer.cc  ndndsim-link-tracer.h  ndndsim-rate-tracer.cc  ndndsim-rate-tracer.h  ndndsim-stack-helper.cc  ndndsim-stack-helper.h  ndndsim-topology-reader.cc  ndndsim-topology-reader.h  ndndsim-traffic-tracer.cc  ndndsim-traffic-tracer.h
model/: ndndsim-app.cc  ndndsim-app.h  ndndsim-go-bridge.cc  ndndsim-go-bridge.h  ndndsim-stack.cc  ndndsim-stack.h
test/: ndndsim-test-suite.cc
